feat: 第二次提交

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Document</title>
   <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -36,7 +36,9 @@
           </div>
           <div class="parent">
           <div class="img-name">
-            蓝色破洞牛仔裤（7天）
+            蓝色破洞牛仔裤<div>
+              （7天）
+            </div>
           </div></div>
         </div>
         <div class="conditions">积分累计达到20</div>
@@ -49,7 +51,9 @@
           </div>
           <div class="parent">
             <div class="img-name">
-              浅蓝色牛仔衬衣（7天）
+              浅蓝色牛仔衬衣<div>
+                （7天）
+              </div>
             </div>
           </div>
         </div>
